[project]
name = "gait-analysis-via-media-pipe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lap>=0.5.12",
    "mediapipe>=0.10.21",
    "opencv-python>=4.11.0.86",
    "ultralytics>=8.3.98",
]

[dependency-groups]
dev = [
    "ruff>=0.11.2",
]
